--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -7,7 +7,7 @@
     @apply inline-block leading-10;
 
     .link {
-      @apply text-xl font-bold duration-300 hover:text-[#265577];
+      @apply text-xl font-semibold duration-300 hover:text-[#265577];
     }
   }
 }
