Revert "Feature/auth"

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,161 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
-}
+.nav-links {
+  & li {
+    @apply inline-block leading-10;
 
-nav {
-  @apply bg-[#DABEB6] w-full h-24 fixed top-0 left-0 px-5 py-2 flex justify-between z-50;
-
-  .btn-container {
-    @apply hidden;
-
-    .checkbtn {
-      @apply hidden text-3xl text-[#143146] cursor-pointer p-2 bg-[#E3D4D0] rounded-full shadow-[0_4px_4px_0_rgba(0,0,0,0.25)] duration-300;
-
-      &:hover {
-        @apply text-[#2d638b] bg-[#eee0dd];
-      }
-    }
-
-    .login-btn {
-      @apply text-3xl text-[#143146] cursor-pointer p-2 bg-[#E3D4D0] rounded-full shadow-[0_4px_4px_0_rgba(0,0,0,0.25)] duration-300;
-
-      &:hover {
-        @apply text-[#2d638b] bg-[#eee0dd];
-      }
-    }
-  }
-
-  #check-menu {
-    @apply hidden absolute;
-  }
-
-  & ul {
-    @apply mr-5 flex gap-10 items-center;
-
-    .menu {
-      @apply flex items-center gap-8;
-      & li {
-        & a {
-          @apply text-xl font-semibold text-[#143146] duration-300 flex items-center gap-1;
-
-          &:hover {
-            @apply text-[#2d638b];
-          }
-        }
-
-        &:last-child a {
-          @apply ml-5 text-base bg-[#E3D4D0] px-3 py-4 rounded-[15px] shadow-[0_4px_4px_0_rgba(0,0,0,0.25)];
-
-          &:hover {
-            @apply bg-[#eee0dd];
-          }
-        }
-      }
-    }
-  }
-
-  @media (max-width: 1020px) {
-    & ul .menu li {
-      & a {
-        @apply text-sm;
-      }
-
-      &:last-child a {
-        @apply text-sm ml-2;
-      }
-    }
-  }
-
-  @media (max-width: 952px) {
-    .logo-container {
-      @apply ml-0;
-      & p {
-        @apply text-[4rem];
-      }
-    }
-  }
-
-  @media (max-width: 858px) {
-    & ul {
-      @apply fixed justify-center w-full h-[100vh] top-24 left-[-100%] bg-[#143146] z-10;
-      transition: all 0.5s;
-
-      .menu {
-        @apply flex flex-col items-start h-[100vh] justify-evenly relative pb-32 pt-14;
-        & li {
-          @apply flex items-center;
-
-          &:last-child a {
-            @apply hidden;
-          }
-          & a {
-            @apply text-2xl font-semibold text-[#DABEB6] uppercase gap-5 w-full flex translate-x-[-500%] transition-transform duration-[.5s] opacity-0;
-
-            .icon-list {
-              @apply scale-150;
-            }
-
-            &:hover {
-              @apply text-[#f1e5e3];
-            }
-          }
-
-          &:nth-child(1) a {
-            @apply delay-[.1s];
-          }
-
-          &:nth-child(2) a {
-            @apply delay-[.125s];
-          }
-
-          &:nth-child(3) a {
-            @apply delay-[.15s];
-          }
-
-          &:nth-child(4) a {
-            @apply delay-[.175s];
-          }
-        }
-      }
-    }
-
-    .btn-container {
-      @apply flex items-center gap-5;
-      .checkbtn {
-        @apply block;
-      }
-    }
-    #check-menu:checked ~ ul {
-      @apply left-0;
-
-      .menu li a {
-        @apply translate-x-0 opacity-100;
-      }
-    }
-
-    #check-menu:checked ~ .btn-container .checkbtn {
-      .bars {
-        @apply hidden;
-      }
-
-      .cross {
-        @apply block;
-      }
-    }
-  }
-
-  @media (max-width: 400px) {
-    .logo-container {
-      .img {
-        @apply hidden;
-      }
+    .link {
+      @apply text-xl font-semibold duration-300 hover:text-[#265577] uppercase;
     }
   }
 }
