--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -11,7 +11,7 @@
 }
 
 nav {
-  @apply bg-[rgba(218,190,182,.8)] w-full h-24 fixed top-0 left-0 px-8 py-2 flex justify-between backdrop-blur-md z-50;
+  @apply bg-[rgba(218,190,182,.8)] w-full h-24 sticky top-0 left-0 px-8 py-2 flex justify-between backdrop-blur-md z-50;
 
   .btn-container {
     @apply hidden;
