--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -44,16 +44,16 @@ nav {
       @apply flex items-center gap-8;
       & li {
         & a {
-          @apply relative text-lg font-semibold text-[#143146] duration-300 flex items-center gap-1 overflow-hidden;
+          @apply relative text-base font-semibold text-[#143146] duration-300 flex items-center gap-1 overflow-hidden;
 
           &::after {
             content: "";
-            @apply absolute w-full h-[2px] bg-[#143146] bottom-0 left-0 translate-y-[-2rem] duration-200;
+            @apply absolute w-full h-[2px] bg-[#143146] bottom-[-2px] left-0 translate-y-[-2rem] duration-200;
           }
         }
 
         &:hover a {
-          @apply text-[#2d638b];
+          @apply text-[#2d638b] overflow-visible;
 
           &::after {
             @apply bg-[#2d638b] translate-y-0;
@@ -98,7 +98,7 @@ nav {
 
   @media (max-width: 858px) {
     & ul {
-      @apply fixed justify-center w-full h-[100vh] top-24 left-[-100%] bg-[#143146] z-10;
+      @apply fixed justify-center w-full h-[100vh] top-24 left-[-100%] bg-[rgba(20,49,70,.95)] z-10;
       transition: all 0.5s;
 
       .menu {
