--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -10,7 +10,7 @@
   list-style: none;
 }
 
-footer { 
+footer {
   @apply bg-[#DABEB6];
 
   .backToTop {
@@ -29,61 +29,64 @@ footer {
     }
   }
 
-  .info div {
-    @apply flex flex-col items-start px-10;
-    & p {
-      @apply text-lg text-[#143146] font-semibold text-center pb-3;
-    }
+  .info {
+    @apply flex flex-wrap flex-row gap-y-8 gap-x-32 p-8 justify-start;
+    & div {
+      @apply flex flex-col items-start px-10;
+      & p {
+        @apply text-lg text-[#143146] font-semibold text-center pb-3;
+      }
 
-    & ul li {
-      @apply text-sm text-[#143146] mb-2;
+      & ul li {
+        @apply text-sm text-[#143146] mb-2;
 
-      & a {
-        @apply relative duration-200 pb-1;
-
-        &::after {
-          content: "";
-          @apply absolute w-0 h-[2px] bg-[#143146] bottom-0 left-0 duration-200;
-        }
-
-        &:hover {
-          @apply text-[#2d638b];
+        & a {
+          @apply relative duration-200 pb-1;
 
           &::after {
-            @apply bg-[#2d638b] w-full;
+            content: "";
+            @apply absolute w-0 h-[2px] bg-[#143146] bottom-0 left-0 duration-200;
+          }
+
+          &:hover {
+            @apply text-[#2d638b];
+
+            &::after {
+              @apply bg-[#2d638b] w-full;
+            }
           }
         }
       }
-    }
 
-    .detail {
-      @apply cursor-pointer;
-      & summary {
-        @apply relative flex flex-row items-center duration-200 gap-1;
-
-        .detail-caret {
-          @apply duration-300;
-        }
-
-        &:hover {
-          @apply text-[#2d638b];
-        }
-      }
-
-      &[open] {
-        @apply text-[#2d638b];
+      .detail {
+        @apply cursor-pointer;
         & summary {
+          @apply relative flex flex-row items-center duration-200 gap-1;
+
           .detail-caret {
-            @apply rotate-180;
+            @apply duration-300;
+          }
+
+          &:hover {
+            @apply text-[#2d638b];
           }
         }
-      }
 
-      & ol {
-        @apply flex flex-col items-start mt-2 pl-2;
+        &[open] {
+          @apply text-[#2d638b];
+          & summary {
+            .detail-caret {
+              @apply rotate-180;
+            }
+          }
+        }
 
-        & li a {
-          @apply flex flex-row items-center gap-1;
+        & ol {
+          @apply flex flex-col items-start mt-2 pl-2;
+
+          & li a {
+            @apply flex flex-row items-center gap-1;
+          }
         }
       }
     }
@@ -94,6 +97,30 @@ footer {
 
     .footer-logo-container {
       @apply flex flex-row justify-center items-start gap-2;
+    }
+  }
+
+  @media (max-width: 1020px) {
+  }
+
+  @media (max-width: 952px) {
+  }
+  @media (max-width: 858px) {
+    .info div {
+      @apply px-0;
+
+      & p {
+        @apply text-base text-[#143146] font-semibold text-center pb-3;
+      }
+
+      & ul li {
+        @apply text-xs text-[#143146] mb-2;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .info {
+      @apply flex flex-wrap flex-row gap-y-9 gap-x-12 p-12;
     }
   }
 }
