--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -10,7 +10,7 @@
   list-style: none;
 }
 
-nav {
+.NavBar {
   @apply bg-[rgba(218,190,182,.8)] w-full h-24 sticky top-0 left-0 px-8 py-2 flex justify-between backdrop-blur-md z-50;
 
   .btn-container {
