--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -11,18 +11,13 @@
 }
 
 .filter-container {
-  background-color: #eed0c6;
-  padding: 16px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 16px;
-  max-width: 300px;
+  @apply bg-[#eed0c6] p-4 rounded-lg shadow-lg max-w-[300px];
 }
 
 .filter-container label {
-  margin-bottom: 8px;
+  @apply mb-2;
 }
 
 .filter-container li {
-  list-style-type: none;
+  @apply list-none;
 }
