--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -10,8 +10,132 @@
   list-style: none;
 }
 
-.filter-container {
-  @apply bg-[#eed0c6] p-4 rounded-lg shadow-lg max-w-[300px];
+.filters-container {
+  @apply sticky top-28 bg-[#eed0c6] rounded-lg shadow-lg flex flex-col gap-5 h-full;
+
+  .filters-by-container {
+    @apply flex flex-col gap-6 w-full p-4;
+
+    .filters-title {
+      @apply text-[#143146] text-xl font-semibold;
+    }
+
+    & span {
+      @apply flex flex-col w-full;
+
+      .filter-title-select {
+        @apply text-[#2d638b] text-sm;
+      }
+
+      & select {
+        @apply p-2 bg-white duration-100;
+
+        &:focus {
+          @apply outline-0;
+        }
+      }
+    }
+  }
+
+  .filters-sort-container {
+    @apply flex flex-col gap-6 w-full p-4;
+
+    .sort-title {
+      @apply text-[#143146] text-xl font-semibold;
+    }
+
+    & span {
+      @apply flex flex-col w-full;
+
+      .sort-title-select {
+        @apply text-[#2d638b] text-sm;
+      }
+
+      & select {
+        @apply p-2 bg-white duration-100;
+
+        &:focus {
+          @apply outline-0;
+        }
+      }
+    }
+  }
+
+  .btn-filter {
+    @apply flex justify-center items-center gap-2 p-4 bg-[#143146] text-[#f1e5e3] rounded-b-lg duration-200;
+
+    &:hover {
+      @apply bg-[#2d638b];
+
+      .icon-filter {
+        -webkit-animation: wobble-ver-right 0.8s both;
+        animation: wobble-ver-right 0.8s both;
+      }
+    }
+
+    &:active {
+      @apply bg-[#2d628bdc];
+    }
+
+    @-webkit-keyframes wobble-ver-right {
+      0%,
+      100% {
+        -webkit-transform: translateY(0) rotate(0);
+        transform: translateY(0) rotate(0);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+      }
+      15% {
+        -webkit-transform: translateY(-3px) rotate(6deg);
+        transform: translateY(-3px) rotate(6deg);
+      }
+      30% {
+        -webkit-transform: translateY(4px) rotate(-6deg);
+        transform: translateY(4px) rotate(-6deg);
+      }
+      45% {
+        -webkit-transform: translateY(-6px) rotate(2.6deg);
+        transform: translateY(-6px) rotate(2.6deg);
+      }
+      60% {
+        -webkit-transform: translateY(3px) rotate(-2.4deg);
+        transform: translateY(3px) rotate(-2.4deg);
+      }
+      75% {
+        -webkit-transform: translateY(-2px) rotate(1.2deg);
+        transform: translateY(-2px) rotate(1.2deg);
+      }
+    }
+    @keyframes wobble-ver-right {
+      0%,
+      100% {
+        -webkit-transform: translateY(0) rotate(0);
+        transform: translateY(0) rotate(0);
+        -webkit-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+      }
+      15% {
+        -webkit-transform: translateY(-3px) rotate(6deg);
+        transform: translateY(-3px) rotate(6deg);
+      }
+      30% {
+        -webkit-transform: translateY(4px) rotate(-6deg);
+        transform: translateY(4px) rotate(-6deg);
+      }
+      45% {
+        -webkit-transform: translateY(-6px) rotate(2.6deg);
+        transform: translateY(-6px) rotate(2.6deg);
+      }
+      60% {
+        -webkit-transform: translateY(3px) rotate(-2.4deg);
+        transform: translateY(3px) rotate(-2.4deg);
+      }
+      75% {
+        -webkit-transform: translateY(-2px) rotate(1.2deg);
+        transform: translateY(-2px) rotate(1.2deg);
+      }
+    }
+  }
 }
 
 .filter-container label {
