--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -28,10 +28,13 @@
       }
 
       & select {
-        @apply p-2 bg-white duration-100;
+        @apply p-2 bg-white rounded duration-100 cursor-pointer;
 
         &:focus {
           @apply outline-0;
+        }
+        & option {
+          @apply cursor-pointer;
         }
       }
     }
@@ -52,17 +55,25 @@
       }
 
       & select {
-        @apply p-2 bg-white duration-100;
+        @apply p-2 bg-white duration-100 cursor-pointer;
 
         &:focus {
           @apply outline-0;
+        }
+
+        & option {
+          @apply cursor-pointer;
         }
       }
     }
   }
 
+  .buttons {
+    @apply w-full flex flex-col justify-center items-center gap-[1px];
+  }
+
   .btn-filter {
-    @apply flex justify-center items-center gap-2 p-4 bg-[#143146] text-[#f1e5e3] rounded-b-lg duration-200;
+    @apply flex justify-center items-center gap-2 p-4 bg-[#143146] text-[#f1e5e3]  duration-200 w-full;
 
     &:hover {
       @apply bg-[#2d638b];
@@ -76,63 +87,17 @@
     &:active {
       @apply bg-[#2d628bdc];
     }
+  }
 
-    @-webkit-keyframes wobble-ver-right {
-      0%,
-      100% {
-        -webkit-transform: translateY(0) rotate(0);
-        transform: translateY(0) rotate(0);
-        -webkit-transform-origin: 50% 50%;
-        transform-origin: 50% 50%;
-      }
-      15% {
-        -webkit-transform: translateY(-3px) rotate(6deg);
-        transform: translateY(-3px) rotate(6deg);
-      }
-      30% {
-        -webkit-transform: translateY(4px) rotate(-6deg);
-        transform: translateY(4px) rotate(-6deg);
-      }
-      45% {
-        -webkit-transform: translateY(-6px) rotate(2.6deg);
-        transform: translateY(-6px) rotate(2.6deg);
-      }
-      60% {
-        -webkit-transform: translateY(3px) rotate(-2.4deg);
-        transform: translateY(3px) rotate(-2.4deg);
-      }
-      75% {
-        -webkit-transform: translateY(-2px) rotate(1.2deg);
-        transform: translateY(-2px) rotate(1.2deg);
-      }
-    }
-    @keyframes wobble-ver-right {
-      0%,
-      100% {
-        -webkit-transform: translateY(0) rotate(0);
-        transform: translateY(0) rotate(0);
-        -webkit-transform-origin: 50% 50%;
-        transform-origin: 50% 50%;
-      }
-      15% {
-        -webkit-transform: translateY(-3px) rotate(6deg);
-        transform: translateY(-3px) rotate(6deg);
-      }
-      30% {
-        -webkit-transform: translateY(4px) rotate(-6deg);
-        transform: translateY(4px) rotate(-6deg);
-      }
-      45% {
-        -webkit-transform: translateY(-6px) rotate(2.6deg);
-        transform: translateY(-6px) rotate(2.6deg);
-      }
-      60% {
-        -webkit-transform: translateY(3px) rotate(-2.4deg);
-        transform: translateY(3px) rotate(-2.4deg);
-      }
-      75% {
-        -webkit-transform: translateY(-2px) rotate(1.2deg);
-        transform: translateY(-2px) rotate(1.2deg);
+  .btn-reset-filters {
+    @apply flex justify-center items-center gap-2 p-4 bg-[#143146] text-[#ffc3c3] rounded-b-lg duration-200 w-full;
+
+    &:hover {
+      @apply bg-[#2d638b];
+
+      .icon-clear-filters {
+        -webkit-animation: wobble-ver-right 0.8s both;
+        animation: wobble-ver-right 0.8s both;
       }
     }
   }
@@ -144,4 +109,63 @@
 
 .filter-container li {
   @apply list-none;
+}
+
+@-webkit-keyframes wobble-ver-right {
+  0%,
+  100% {
+    -webkit-transform: translateY(0) rotate(0);
+    transform: translateY(0) rotate(0);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+  }
+  15% {
+    -webkit-transform: translateY(-3px) rotate(6deg);
+    transform: translateY(-3px) rotate(6deg);
+  }
+  30% {
+    -webkit-transform: translateY(4px) rotate(-6deg);
+    transform: translateY(4px) rotate(-6deg);
+  }
+  45% {
+    -webkit-transform: translateY(-6px) rotate(2.6deg);
+    transform: translateY(-6px) rotate(2.6deg);
+  }
+  60% {
+    -webkit-transform: translateY(3px) rotate(-2.4deg);
+    transform: translateY(3px) rotate(-2.4deg);
+  }
+  75% {
+    -webkit-transform: translateY(-2px) rotate(1.2deg);
+    transform: translateY(-2px) rotate(1.2deg);
+  }
+}
+@keyframes wobble-ver-right {
+  0%,
+  100% {
+    -webkit-transform: translateY(0) rotate(0);
+    transform: translateY(0) rotate(0);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+  }
+  15% {
+    -webkit-transform: translateY(-3px) rotate(6deg);
+    transform: translateY(-3px) rotate(6deg);
+  }
+  30% {
+    -webkit-transform: translateY(4px) rotate(-6deg);
+    transform: translateY(4px) rotate(-6deg);
+  }
+  45% {
+    -webkit-transform: translateY(-6px) rotate(2.6deg);
+    transform: translateY(-6px) rotate(2.6deg);
+  }
+  60% {
+    -webkit-transform: translateY(3px) rotate(-2.4deg);
+    transform: translateY(3px) rotate(-2.4deg);
+  }
+  75% {
+    -webkit-transform: translateY(-2px) rotate(1.2deg);
+    transform: translateY(-2px) rotate(1.2deg);
+  }
 }
