--- a/src/components/CatalogCarousel/CarouselCatalog.css
+++ b/src/components/CatalogCarousel/CarouselCatalog.css
@@ -6,7 +6,7 @@
   @apply relative w-full h-96 overflow-hidden flex justify-center items-center;
 
   .carousel-img-container {
-    @apply w-[90%] h-full rounded-2xl overflow-hidden;
+    @apply w-full h-full rounded-2xl overflow-hidden;
     .carousel-image {
       @apply object-cover w-full h-full;
     }
