--- a/src/components/CardsProducts/CardProduct.css
+++ b/src/components/CardsProducts/CardProduct.css
@@ -14,10 +14,10 @@
   @apply relative flex flex-col items-start w-60 h-[31rem] bg-white shadow-[0_1px_15px_0_rgba(0,0,0,0.20)] rounded-md overflow-hidden;
 
   .card-product-image-container {
-    @apply flex justify-center items-center w-full border-b border-[#DABEB6] overflow-hidden z-10;
+    @apply flex justify-center items-center w-60 border-b border-[#DABEB6] overflow-hidden z-10;
 
     & img {
-      @apply object-contain aspect-square w-full duration-200;
+      @apply object-contain w-full duration-200 aspect-square;
 
       &:hover {
         @apply scale-105;
@@ -29,12 +29,16 @@
     @apply absolute top-0 right-0 p-2 text-[#143146] duration-200 z-20;
 
     &:hover {
-      @apply text-[#ee2130];
+      @apply text-[#ee2130] scale-105;
+    }
+
+    &:active {
+      @apply scale-90;
     }
   }
 
   .card-product-info {
-    @apply flex flex-col items-start justify-center p-2 w-full;
+    @apply flex flex-col items-start justify-center w-full p-2;
 
     .card-product-title {
       @apply text-base text-[#143146] font-semibold text-ellipsis w-full duration-100;
